# FYI-qml-challenge

./: .gitignore  README.md
base1/: CMakeLists.txt  FontText.qml  Main.qml  Test.qml  main.cpp  resource.qrc
